syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "grpc/event/eventpb/event_service.proto";

package starscope.event;

option go_package = "github.com/loomi-labs/star-scope/event/processedeventpb";

message EventProcessedMsg {
  uint64 chain_id = 1;
  string wallet_address = 2;
  starscope.grpc.event.EventType event_type = 3;
}
